cleanup import file and convert to ipynb

--- a/import_file.ipynb
+++ b/import_file.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## read file into list \"data\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,31 +21,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 apple\n",
-      "\n",
-      "1 orange\n",
-      "\n",
-      "2 peach\n",
-      "\n",
-      "3 grape\n",
-      "\n",
-      "4 plum \n",
-      "\n",
-      "5 pear\n"
-     ]
-    }
-   ],
+   "source": [
+    "## print each item and its index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for line in data:\n",
     "    print(f\"{data.index(line)} \" + line) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## insert the \"data\" list to SQL database table \"fruit\"\n",
+    "for no other reason than to show that we can"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Assuming `data` is a list of strings\n",
+    "import sqlite3\n",
+    "\n",
+    "# Create an in-memory database\n",
+    "conn = sqlite3.connect(':memory:')\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "# Create a table and insert data\n",
+    "c.execute('CREATE TABLE fruit (id INTEGER PRIMARY KEY, name TEXT)')\n",
+    "for line in data:\n",
+    "    c.execute('INSERT INTO fruit (name) VALUES (?)', (line.strip(),))\n",
+    "\n",
+    "# Select all lines from the table\n",
+    "c.execute('SELECT * FROM fruit')\n",
+    "result = c.fetchall()\n",
+    "\n",
+    "# Print the result\n",
+    "for row in result:\n",
+    "    print(row)\n"
    ]
   }
  ],
