--- a/snippets.ipynb
+++ b/snippets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVaN87Zqxr6kjKtPRZIJMl",
+      "authorship_tag": "ABX9TyOsGqj+Mci/kcfO5Mp20Pm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tFsk9pweeuTI",
-        "outputId": "70c1de84-4940-4279-e780-76720305416f"
+        "outputId": "8773c700-9b5e-4d07-bace-414022746620"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
             "[0, 2, 4]\n",
             "[6, 8, 10]\n",
             "[0, 2, 4, 6, 8, 10]\n",
-            "lo W\n"
+            "lo Wor\n"
           ]
         }
       ],
@@ -57,7 +57,7 @@
         "print(even_numbers[:])\n",
         "\n",
         "greeting = \"Hello World!\"\n",
-        "print(greeting[3:7])"
+        "print(greeting[3:9])"
       ]
     }
   ]
